--- a/css/all.css
+++ b/css/all.css
@@ -7,7 +7,16 @@
     border-radius: 50%;
 }
 
+.a-link{
+position: absolute;
+width: 100%;
+height: 70%;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
 
+}
 
 .skill-content{
     width: 65%;
@@ -37,4 +46,8 @@
 
 .contact-info{
     padding: 0px;
+}
+
+.i-item{
+    margin-right: 10px;
 }
