--- a/css/all.css
+++ b/css/all.css
@@ -51,3 +51,15 @@ bottom: 0;
 .i-item{
     margin-right: 10px;
 }
+
+.fa-active{
+    color: black;
+}
+
+.fa-active:hover{
+    color: blue;
+}
+
+.fa-active:active{
+    color: blue;
+}
