--- a/css/all.css
+++ b/css/all.css
@@ -1,11 +1,14 @@
 
-
+.about-pic{
+    width: 100%;
+    text-align: center;
+}
 
 .pic{
-    width: 300px;
-    height: 300px;
     border-radius: 50%;
+    border: 1px solid black;
 }
+
 
 .a-link{
 position: absolute;
@@ -62,4 +65,15 @@ bottom: 0;
 
 .fa-active:active{
     color: blue;
+}
+
+@media(max-width:768px){
+    .about-pic{
+        margin-bottom: 10px;
+    }
+    .skill-content{
+        width: 100%;
+        margin: 0 auto;
+        padding: 0px;
+    }
 }
